--- a/App.css
+++ b/App.css
@@ -1,3 +1,18 @@
+.start {
+  opacity: 0;
+
+}
+.end {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.main-bg{
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+
 .App {
   text-align: center;
 }
